Network.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: VPC Configuration

Metadata: #파라미터들의 그룹들을 Label 작업
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - 
        Label: 
          default: "Network Configuration"
        Parameters: 
          - VpcCIDR
          - PubCIDR1
          - PubCIDR2
          - PriCIDRWEB1
          - PriCIDRWEB2
          - PriCIDRDB1
          - PriCIDRDB2


          
Parameters:   
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC ex(10.0.0.0/16)
    Type: String
    Default: 10.0.0.0/16
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'

  PubCIDR1:
    Description: Please enter the IP range (CIDR notation) ex(10.0.2.0/24)
    Type: String
    Default: 10.0.2.0/24
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  PubCIDR2:
    Description: Please enter the IP range (CIDR notation) ex(10.0.4.0/24)
    Type: String
    Default: 10.0.4.0/24
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'

  PriCIDRWEB1:
    Description: Please enter the IP range (CIDR notation) ex(10.0.32.0/24)
    Type: String
    Default: 10.0.8.0/24
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  PriCIDRWEB2:
    Description: Please enter the IP range (CIDR notation) ex(10.0.64.0/24)
    Type: String
    Default: 10.0.16.0/24
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  PriCIDRDB1:
    Description: Please enter the IP range (CIDR notation) ex(10.0.32.0/24)
    Type: String
    Default: 10.0.32.0/24
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  PriCIDRDB2:
    Description: Please enter the IP range (CIDR notation) ex(10.0.64.0/24)
    Type: String
    Default: 10.0.64.0/24
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  



Resources:
########### VPC ####################
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: VPC 10.0.0.0/16
        
############### igw #####################
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: CFN Stack 
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: igw
        
  Attachigw:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: [VPC,InternetGateway ]
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

          
########### Subnet #################
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: !Ref PubCIDR1
      MapPublicIpOnLaunch: true
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: pubsub1
        
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs ]
      CidrBlock: !Ref PubCIDR2
      MapPublicIpOnLaunch: true
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: pubsub2
        
  PrivateSubnetWEB1:
    Type: AWS::EC2::Subnet
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: !Ref PriCIDRWEB1
      MapPublicIpOnLaunch: false
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: priWEB1
        
  PrivateSubnetWEB2:
    Type: AWS::EC2::Subnet
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs ]
      CidrBlock: !Ref PriCIDRWEB2
      MapPublicIpOnLaunch: false
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: priWEB2
        
  PrivateSubnetDB1:
    Type: AWS::EC2::Subnet
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: !Ref PriCIDRDB1
      MapPublicIpOnLaunch: false
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: priDB1
        
  PrivateSubnetDB2:
    Type: AWS::EC2::Subnet
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs ]
      CidrBlock: !Ref PriCIDRDB2
      MapPublicIpOnLaunch: false
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: priDB2
        
################ EIP NAT  ##############
  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: VPC
    DependsOn: Attachigw
    Properties:
      Domain: vpc    

  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: [VPC, NatGatewayEIP]
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: NAT
        
############ Routing Table ##############

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: pubRT
        
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: VPC
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: CFN Stack
          Value: !Ref 'AWS::StackName'
        - Key: Name
          Value: priRT
        
 
        
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: [Attachigw, PublicRouteTable,InternetGateway]
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: [Attachigw, PublicRouteTable,InternetGateway,PublicRoute]
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
   
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: [Attachigw, PublicRouteTable,InternetGateway,PublicRoute]
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  

  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: [PrivateRouteTable, NatGateway]
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  
  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: [PrivateRouteTable, NatGateway,PrivateRoute]
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnetWEB1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: [PrivateRouteTable, NatGateway,PrivateRoute]
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnetWEB2     

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: [PrivateRouteTable, NatGateway,PrivateRoute]
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnetDB1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: [PrivateRouteTable, NatGateway,PrivateRoute]
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnetDB2     
     

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnetWEB1
  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnetWEB2
  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnetDB1
  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnetDB2
